Fixed horizontal overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@
 
 body{
   width: 100vw;
+  max-width: 100%;
   background-image: url(/background.png);
   background-position: center;
   background-repeat: none;
